Create offer feature implemented with first real validation.