@@ -3,37 +3,36 @@ package org.softuni.mobilele.service.impl;
 import org.softuni.mobilele.model.dto.BrandDTO;
 import org.softuni.mobilele.model.dto.ModelDTO;
 import org.softuni.mobilele.model.entity.ModelEntity;
+import org.softuni.mobilele.repository.BrandRepository;
 import org.softuni.mobilele.repository.ModelRepository;
 import org.softuni.mobilele.service.BrandService;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.TreeMap;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class BrandServiceImpl implements BrandService {
 
     private ModelRepository modelRepository;
+    private BrandRepository brandRepository;
 
-    public BrandServiceImpl(ModelRepository modelRepository) {
+    public BrandServiceImpl(BrandRepository brandRepository, ModelRepository modelRepository) {
+        this.brandRepository = brandRepository;
         this.modelRepository = modelRepository;
     }
 
     @Override
     public List<BrandDTO> getAllBrands() {
-        Map<String, BrandDTO> brands = new TreeMap<>();
-
-        for (ModelEntity model : modelRepository.findAll()) {
-            String brandName = model.getBrand().getBrand();
-            if(!brands.containsKey(brandName)) {
-                brands.put(brandName, new BrandDTO(brandName, new ArrayList<>()));
-            }
-
-            brands.get(brandName).models().add(new ModelDTO(model.getId(), model.getName()));
-        }
-
-        return brands.values().stream().toList();
+        return brandRepository.findAll().stream()
+                .map(brand -> new BrandDTO(
+                        brand.getBrand(),
+                        modelRepository.findAllByBrandId(brand.getId()).stream()
+                                .map(model -> new ModelDTO(model.getId(), model.getName()))
+                                .sorted(Comparator.comparing(ModelDTO::name))
+                                .collect(Collectors.toList())
+                ))
+                .sorted(Comparator.comparing(BrandDTO::name))
+                .collect(Collectors.toList());
     }
 }
